syntax = "proto3";

import "operator.proto";

package bread;

service Bread {
  option (operator.name) = "bread";

  rpc ListApps(ListAppsRequest) returns (ListAppsResponse);
  // List up to 10 most recent BREAD builds.
  rpc ListBuilds(ListBuildsRequest) returns (ListBuildsResponse);
  rpc EcsDeploy(EcsDeployRequest) returns (EcsDeployResponse);
}

message BreadConfig {
  string AwsRegion = 1;
  string CanoeEcsService = 3;
  string DeployTimeout = 4;
  string BambooUsername = 5;
  string BambooPassword = 6;
  string BambooUrl = 7;
}

message ListAppsRequest {
  operator.Source source = 1;
}

message ListAppsResponse {
  operator.Output output = 1;
}

message ListBuildsRequest {
  operator.Source source = 1;
  string plan = 2;
}

message ListBuildsResponse {
  operator.Output output = 1;
}

message EcsDeployRequest {
  operator.Source source = 1;
  string app = 2;
  string build = 3;
}

message EcsDeployResponse {
  operator.Output output = 1;
}
